--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ transition: all 0.4s ease
     color: var(--text-color);
 }
 
-.posts__title span{
+.posts__title span{ 
    background: var(--text-gradient);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -427,6 +427,30 @@ object-fit: cover;
 display: flex;
 }
 /* FOOTER END */
+
+/* EXAMPLES START */
+
+.example {
+ padding-top: 69px;
+ padding-bottom: 35px;
+}
+ .examples__info {
+text-align: center;
+color: var(--text-color);
+margin-bottom: 99px;    
+}
+.examples__title {
+font-weight: 700;
+font-size: 48px;
+line-height: 1;
+margin-bottom: 38px;
+}
+.examples__text {
+ font-weight: 400;
+ font-size: 20px;
+ line-height: 1;
+}
+/* EXAMPLES END */
 
 /* MEDIA START */
 @media screen and (max-width: 1024px) {
@@ -808,6 +832,20 @@ padding: 10px 24px;
 font-size: 16px;
 }
 
+.example {
+ padding-top: 40px;
+ padding-bottom: 50px;
+}
+ .examples__info {
+margin-bottom: 43px;    
+}
+.examples__title {
+font-size: 24px;
+margin-bottom: 17px;
+}
+.examples__text {
+ font-size: 16px;
+}
 .footer {
  padding-top: 20px;
  padding-bottom: 30px;
@@ -831,6 +869,8 @@ height: 20px;
 .footer__link {
 display: flex;
 }
+
+
 }
 @media screen and (max-width: 600px) {
  .logo img{
@@ -1066,7 +1106,16 @@ font-size: 10px;
 padding: 9px 20px;
 font-size: 10px;
 }
-
+.example {
+ padding-top: 33px;
+}
+ 
+.examples__title {
+font-size: 20px;
+}
+.examples__text {
+ font-size: 10px;
+}
 
 .footer {
  padding-top: 9px;
